create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2269,6 +2269,23 @@ body {
   word-wrap: break-word;
   word-break: break-word;
 }
+.cid-qMsBXS21Le {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #f3f4f6;
+}
+.cid-qMsBXS21Le .testimonial-text {
+  font-style: italic;
+  color: #676767;
+  font-weight: 300;
+}
+.cid-qMsBXS21Le .mbr-author-name {
+  font-weight: bold;
+  color: #232;
+}
+.cid-qMsBXS21Le .mbr-author-desc {
+  color: #232;
+}
 .cid-qLvY6ZzmAp {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -4139,6 +4156,152 @@ body {
   .cid-qLw0zD2NaZ .carousel-inner.slides6 .cloneditem-4,
   .cid-qLw0zD2NaZ .carousel-inner.slides6 .cloneditem-5 {
     display: block;
+  }
+}
+.cid-qMsF7rt6WY {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #fafafa;
+}
+.cid-qMsF7rt6WY h3 {
+  text-align: center;
+  font-weight: 300;
+}
+.cid-qMsF7rt6WY .progress {
+  width: 100%;
+}
+.cid-qMsF7rt6WY .title-wrap {
+  display: flex;
+  justify-content: space-between;
+}
+.cid-qMsF7rt6WY progress {
+  height: 8px;
+}
+.cid-qMsF7rt6WY .progressbar-number {
+  display: inline-block;
+}
+.cid-qMsF7rt6WY .progress-primary {
+  background: rgba(206, 206, 206, 0.4);
+  border: none;
+  outline: none;
+}
+.cid-qMsF7rt6WY .progress-primary::-webkit-progress-bar {
+  background: rgba(206, 206, 206, 0.4);
+}
+.cid-qMsF7rt6WY .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-qMsF7rt6WY .section-content-title {
+  font-weight: 500;
+}
+.cid-qMsF7rt6WY .progress_value {
+  position: relative;
+}
+.cid-qMsF7rt6WY .progress1 .progressbar-number:before,
+.cid-qMsF7rt6WY .progress2 .progressbar-number:before,
+.cid-qMsF7rt6WY .progress3 .progressbar-number:before,
+.cid-qMsF7rt6WY .progress4 .progressbar-number:before,
+.cid-qMsF7rt6WY .progress5 .progressbar-number:before {
+  position: absolute;
+  right: 15px;
+  top: 0;
+}
+.cid-qMsF7rt6WY progress[value]::-webkit-progress-bar {
+  background: rgba(206, 206, 206, 0.4);
+}
+.cid-qMsF7rt6WY progress::-webkit-progress-value {
+  background: #149dcc;
+}
+.cid-qMsF7rt6WY progress[value]::-moz-progress-bar {
+  background: #149dcc;
+}
+.cid-qMsF7rt6WY progress::-ms-fill {
+  background: #149dcc;
+}
+.cid-qMsF7rt6WY .progress1 .progressbar-number:before {
+  content: '100';
+}
+.cid-qMsF7rt6WY .progress2 .progressbar-number:before {
+  content: '90';
+}
+.cid-qMsF7rt6WY .progress3 .progressbar-number:before {
+  content: '80';
+}
+.cid-qMsF7rt6WY .progress4 .progressbar-number:before {
+  content: '70';
+}
+.cid-qMsF7rt6WY .progress5 .progressbar-number:before {
+  content: '60';
+}
+@media (min-width: 768px) {
+  .cid-qMsF7rt6WY .text-elements {
+    padding-right: 3rem;
+  }
+  .cid-qMsF7rt6WY .progress_elements {
+    padding-left: 3rem;
+  }
+}
+.cid-qMsEo6a3HA {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #f9f9f9;
+}
+.cid-qMsEo6a3HA .nav-tabs {
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  border-bottom: none;
+}
+.cid-qMsEo6a3HA .nav-tabs .nav-link {
+  box-sizing: border-box;
+  color: #767676;
+  font-style: normal;
+  font-weight: 500;
+  border-radius: 3px;
+  border: 1px solid #767676;
+  padding: 1rem 3rem;
+  margin: 0.4rem .8rem !important;
+  transition: all .3s;
+}
+.cid-qMsEo6a3HA .nav-tabs .nav-link:hover {
+  background-color: #149dcc;
+}
+.cid-qMsEo6a3HA .nav-tabs .nav-link:focus {
+  box-shadow: none;
+  background-color: #149dcc;
+}
+.cid-qMsEo6a3HA .nav-tabs .nav-link.active {
+  font-weight: 500;
+  color: #ffffff;
+  font-style: normal;
+  border: none;
+  background: #149dcc;
+}
+.cid-qMsEo6a3HA .nav-tabs .nav-link.active:hover {
+  border: none;
+}
+.cid-qMsEo6a3HA .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-qMsEo6a3HA p {
+  color: #767676;
+}
+.cid-qMsEo6a3HA .mbr-figure {
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+  -webkit-align-self: flex-start;
+  align-self: flex-start;
+  padding-right: 4rem;
+}
+.cid-qMsEo6a3HA .mbr-text {
+  word-break: break-word;
+}
+@media (max-width: 991px) {
+  .cid-qMsEo6a3HA .mbr-figure {
+    padding-right: 0;
+    padding-left: 0;
+    padding-bottom: 2rem;
   }
 }
 .cid-qMrGzrn0F6 .navbar {
