create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3953,356 +3953,34 @@ body {
 .cid-qMrGE0eLbu P {
   text-align: left;
 }
-.cid-qLw0zD2NaZ {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #55b4d4;
-  background: linear-gradient(#55b4d4, #efefef);
+.cid-qMsH5WZH8j {
+  padding-top: 75px;
+  padding-bottom: 0px;
+  background-color: #efefef;
 }
-.cid-qLw0zD2NaZ .carousel-control {
-  background: #000;
-}
-.cid-qLw0zD2NaZ .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-qLw0zD2NaZ .carousel-item {
-  -webkit-justify-content: center;
-  justify-content: center;
-}
-.cid-qLw0zD2NaZ .carousel-item .media-container-row {
-  -webkit-flex-grow: 1;
-  flex-grow: 1;
-}
-.cid-qLw0zD2NaZ .carousel-item .wrap-img {
-  text-align: center;
-}
-.cid-qLw0zD2NaZ .carousel-item .wrap-img img {
-  max-height: 150px;
-  width: auto;
-  max-width: 100%;
-}
-.cid-qLw0zD2NaZ .carousel-controls {
-  display: flex;
-  -webkit-justify-content: center;
-  justify-content: center;
-}
-.cid-qLw0zD2NaZ .carousel-controls .carousel-control {
-  background: #000;
-  border-radius: 50%;
-  position: static;
-  width: 40px;
-  height: 40px;
-  margin-top: 2rem;
-  border-width: 1px;
-}
-.cid-qLw0zD2NaZ .carousel-controls .carousel-control.carousel-control-prev {
-  left: auto;
-  margin-right: 20px;
-  margin-left: 0;
-}
-.cid-qLw0zD2NaZ .carousel-controls .carousel-control.carousel-control-next {
-  right: auto;
-  margin-right: 0;
-}
-.cid-qLw0zD2NaZ .carousel-controls .carousel-control .mbr-iconfont {
-  font-size: 1rem;
-}
-.cid-qLw0zD2NaZ .cloneditem-1,
-.cid-qLw0zD2NaZ .cloneditem-2,
-.cid-qLw0zD2NaZ .cloneditem-3,
-.cid-qLw0zD2NaZ .cloneditem-4,
-.cid-qLw0zD2NaZ .cloneditem-5 {
-  display: none;
-}
-.cid-qLw0zD2NaZ .col-lg-15 {
-  -webkit-box-flex: 0;
-  -ms-flex: 0 0 100%;
-  -webkit-flex: 0 0 100%;
-  flex: 0 0 100%;
-  max-width: 100%;
-  position: relative;
-  min-height: 1px;
-  padding-right: 10px;
-  padding-left: 10px;
-  width: 100%;
-}
-@media (min-width: 992px) {
-  .cid-qLw0zD2NaZ .col-lg-15 {
-    -ms-flex: 0 0 20%;
-    -webkit-flex: 0 0 20%;
-    flex: 0 0 20%;
-    max-width: 20%;
-    width: 20%;
-  }
-  .cid-qLw0zD2NaZ .carousel-inner.slides2 > .carousel-item.active.carousel-item-right,
-  .cid-qLw0zD2NaZ .carousel-inner.slides2 > .carousel-item.carousel-item-next {
-    left: 0;
-    -webkit-transform: translate3d(50%, 0, 0);
-    transform: translate3d(50%, 0, 0);
-  }
-  .cid-qLw0zD2NaZ .carousel-inner.slides2 > .carousel-item.active.carousel-item-left,
-  .cid-qLw0zD2NaZ .carousel-inner.slides2 > .carousel-item.carousel-item-prev {
-    left: 0;
-    -webkit-transform: translate3d(-50%, 0, 0);
-    transform: translate3d(-50%, 0, 0);
-  }
-  .cid-qLw0zD2NaZ .carousel-inner.slides2 > .carousel-item.carousel-item-left,
-  .cid-qLw0zD2NaZ .carousel-inner.slides2 > .carousel-item.carousel-item-prev.carousel-item-right,
-  .cid-qLw0zD2NaZ .carousel-inner.slides2 > .carousel-item.active {
-    left: 0;
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
-  .cid-qLw0zD2NaZ .carousel-inner.slides2 .cloneditem-1,
-  .cid-qLw0zD2NaZ .carousel-inner.slides2 .cloneditem-2,
-  .cid-qLw0zD2NaZ .carousel-inner.slides2 .cloneditem-3 {
-    display: block;
-  }
-  .cid-qLw0zD2NaZ .carousel-inner.slides3 > .carousel-item.active.carousel-item-right,
-  .cid-qLw0zD2NaZ .carousel-inner.slides3 > .carousel-item.carousel-item-next {
-    left: 0;
-    -webkit-transform: translate3d(33.333333%, 0, 0);
-    transform: translate3d(33.333333%, 0, 0);
-  }
-  .cid-qLw0zD2NaZ .carousel-inner.slides3 > .carousel-item.active.carousel-item-left,
-  .cid-qLw0zD2NaZ .carousel-inner.slides3 > .carousel-item.carousel-item-prev {
-    left: 0;
-    -webkit-transform: translate3d(-33.333333%, 0, 0);
-    transform: translate3d(-33.333333%, 0, 0);
-  }
-  .cid-qLw0zD2NaZ .carousel-inner.slides3 > .carousel-item.carousel-item-left,
-  .cid-qLw0zD2NaZ .carousel-inner.slides3 > .carousel-item.carousel-item-prev.carousel-item-right,
-  .cid-qLw0zD2NaZ .carousel-inner.slides3 > .carousel-item.active {
-    left: 0;
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
-  .cid-qLw0zD2NaZ .carousel-inner.slides3 .cloneditem-1,
-  .cid-qLw0zD2NaZ .carousel-inner.slides3 .cloneditem-2,
-  .cid-qLw0zD2NaZ .carousel-inner.slides3 .cloneditem-3 {
-    display: block;
-  }
-  .cid-qLw0zD2NaZ .carousel-inner.slides4 > .carousel-item.active.carousel-item-right,
-  .cid-qLw0zD2NaZ .carousel-inner.slides4 > .carousel-item.carousel-item-next {
-    left: 0;
-    -webkit-transform: translate3d(25%, 0, 0);
-    transform: translate3d(25%, 0, 0);
-  }
-  .cid-qLw0zD2NaZ .carousel-inner.slides4 > .carousel-item.active.carousel-item-left,
-  .cid-qLw0zD2NaZ .carousel-inner.slides4 > .carousel-item.carousel-item-prev {
-    left: 0;
-    -webkit-transform: translate3d(-25%, 0, 0);
-    transform: translate3d(-25%, 0, 0);
-  }
-  .cid-qLw0zD2NaZ .carousel-inner.slides4 > .carousel-item.carousel-item-left,
-  .cid-qLw0zD2NaZ .carousel-inner.slides4 > .carousel-item.carousel-item-prev.carousel-item-right,
-  .cid-qLw0zD2NaZ .carousel-inner.slides4 > .carousel-item.active {
-    left: 0;
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
-  .cid-qLw0zD2NaZ .carousel-inner.slides4 .cloneditem-1,
-  .cid-qLw0zD2NaZ .carousel-inner.slides4 .cloneditem-2,
-  .cid-qLw0zD2NaZ .carousel-inner.slides4 .cloneditem-3 {
-    display: block;
-  }
-  .cid-qLw0zD2NaZ .carousel-inner.slides5 > .carousel-item.active.carousel-item-right,
-  .cid-qLw0zD2NaZ .carousel-inner.slides5 > .carousel-item.carousel-item-next {
-    left: 0;
-    -webkit-transform: translate3d(20%, 0, 0);
-    transform: translate3d(20%, 0, 0);
-  }
-  .cid-qLw0zD2NaZ .carousel-inner.slides5 > .carousel-item.active.carousel-item-left,
-  .cid-qLw0zD2NaZ .carousel-inner.slides5 > .carousel-item.carousel-item-prev {
-    left: 0;
-    -webkit-transform: translate3d(-20%, 0, 0);
-    transform: translate3d(-20%, 0, 0);
-  }
-  .cid-qLw0zD2NaZ .carousel-inner.slides5 > .carousel-item.carousel-item-left,
-  .cid-qLw0zD2NaZ .carousel-inner.slides5 > .carousel-item.carousel-item-prev.carousel-item-right,
-  .cid-qLw0zD2NaZ .carousel-inner.slides5 > .carousel-item.active {
-    left: 0;
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
-  .cid-qLw0zD2NaZ .carousel-inner.slides5 .cloneditem-1,
-  .cid-qLw0zD2NaZ .carousel-inner.slides5 .cloneditem-2,
-  .cid-qLw0zD2NaZ .carousel-inner.slides5 .cloneditem-3,
-  .cid-qLw0zD2NaZ .carousel-inner.slides5 .cloneditem-4 {
-    display: block;
-  }
-  .cid-qLw0zD2NaZ .carousel-inner.slides6 > .carousel-item.active.carousel-item-right,
-  .cid-qLw0zD2NaZ .carousel-inner.slides6 > .carousel-item.carousel-item-next {
-    left: 0;
-    -webkit-transform: translate3d(16.666667%, 0, 0);
-    transform: translate3d(16.666667%, 0, 0);
-  }
-  .cid-qLw0zD2NaZ .carousel-inner.slides6 > .carousel-item.active.carousel-item-left,
-  .cid-qLw0zD2NaZ .carousel-inner.slides6 > .carousel-item.carousel-item-prev {
-    left: 0;
-    -webkit-transform: translate3d(-16.666667%, 0, 0);
-    transform: translate3d(-16.666667%, 0, 0);
-  }
-  .cid-qLw0zD2NaZ .carousel-inner.slides6 > .carousel-item.carousel-item-left,
-  .cid-qLw0zD2NaZ .carousel-inner.slides6 > .carousel-item.carousel-item-prev.carousel-item-right,
-  .cid-qLw0zD2NaZ .carousel-inner.slides6 > .carousel-item.active {
-    left: 0;
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
-  .cid-qLw0zD2NaZ .carousel-inner.slides6 .cloneditem-1,
-  .cid-qLw0zD2NaZ .carousel-inner.slides6 .cloneditem-2,
-  .cid-qLw0zD2NaZ .carousel-inner.slides6 .cloneditem-3,
-  .cid-qLw0zD2NaZ .carousel-inner.slides6 .cloneditem-4,
-  .cid-qLw0zD2NaZ .carousel-inner.slides6 .cloneditem-5 {
-    display: block;
-  }
-}
-.cid-qMsF7rt6WY {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #fafafa;
-}
-.cid-qMsF7rt6WY h3 {
-  text-align: center;
-  font-weight: 300;
-}
-.cid-qMsF7rt6WY .progress {
-  width: 100%;
-}
-.cid-qMsF7rt6WY .title-wrap {
-  display: flex;
-  justify-content: space-between;
-}
-.cid-qMsF7rt6WY progress {
-  height: 8px;
-}
-.cid-qMsF7rt6WY .progressbar-number {
-  display: inline-block;
-}
-.cid-qMsF7rt6WY .progress-primary {
-  background: rgba(206, 206, 206, 0.4);
-  border: none;
-  outline: none;
-}
-.cid-qMsF7rt6WY .progress-primary::-webkit-progress-bar {
-  background: rgba(206, 206, 206, 0.4);
-}
-.cid-qMsF7rt6WY .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-qMsF7rt6WY .section-content-title {
+.cid-qMsH5WZH8j h4 {
+  text-align: left;
   font-weight: 500;
 }
-.cid-qMsF7rt6WY .progress_value {
-  position: relative;
-}
-.cid-qMsF7rt6WY .progress1 .progressbar-number:before,
-.cid-qMsF7rt6WY .progress2 .progressbar-number:before,
-.cid-qMsF7rt6WY .progress3 .progressbar-number:before,
-.cid-qMsF7rt6WY .progress4 .progressbar-number:before,
-.cid-qMsF7rt6WY .progress5 .progressbar-number:before {
-  position: absolute;
-  right: 15px;
-  top: 0;
-}
-.cid-qMsF7rt6WY progress[value]::-webkit-progress-bar {
-  background: rgba(206, 206, 206, 0.4);
-}
-.cid-qMsF7rt6WY progress::-webkit-progress-value {
-  background: #149dcc;
-}
-.cid-qMsF7rt6WY progress[value]::-moz-progress-bar {
-  background: #149dcc;
-}
-.cid-qMsF7rt6WY progress::-ms-fill {
-  background: #149dcc;
-}
-.cid-qMsF7rt6WY .progress1 .progressbar-number:before {
-  content: '100';
-}
-.cid-qMsF7rt6WY .progress2 .progressbar-number:before {
-  content: '90';
-}
-.cid-qMsF7rt6WY .progress3 .progressbar-number:before {
-  content: '80';
-}
-.cid-qMsF7rt6WY .progress4 .progressbar-number:before {
-  content: '70';
-}
-.cid-qMsF7rt6WY .progress5 .progressbar-number:before {
-  content: '60';
-}
-@media (min-width: 768px) {
-  .cid-qMsF7rt6WY .text-elements {
-    padding-right: 3rem;
-  }
-  .cid-qMsF7rt6WY .progress_elements {
-    padding-left: 3rem;
-  }
-}
-.cid-qMsEo6a3HA {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #f9f9f9;
-}
-.cid-qMsEo6a3HA .nav-tabs {
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-  border-bottom: none;
-}
-.cid-qMsEo6a3HA .nav-tabs .nav-link {
-  box-sizing: border-box;
+.cid-qMsH5WZH8j p {
   color: #767676;
-  font-style: normal;
-  font-weight: 500;
-  border-radius: 3px;
-  border: 1px solid #767676;
-  padding: 1rem 3rem;
-  margin: 0.4rem .8rem !important;
-  transition: all .3s;
+  text-align: left;
+  margin-bottom: 0;
 }
-.cid-qMsEo6a3HA .nav-tabs .nav-link:hover {
-  background-color: #149dcc;
+.cid-qMsH5WZH8j .card-img {
+  text-align: left;
+  background-color: #ffffff;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  padding: 3rem 2.5rem 0 2.5rem;
 }
-.cid-qMsEo6a3HA .nav-tabs .nav-link:focus {
-  box-shadow: none;
-  background-color: #149dcc;
+.cid-qMsH5WZH8j .card-img span {
+  font-size: 72px;
+  color: #707070;
 }
-.cid-qMsEo6a3HA .nav-tabs .nav-link.active {
-  font-weight: 500;
-  color: #ffffff;
-  font-style: normal;
-  border: none;
-  background: #149dcc;
-}
-.cid-qMsEo6a3HA .nav-tabs .nav-link.active:hover {
-  border: none;
-}
-.cid-qMsEo6a3HA .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-qMsEo6a3HA p {
-  color: #767676;
-}
-.cid-qMsEo6a3HA .mbr-figure {
-  -webkit-flex-shrink: 0;
-  flex-shrink: 0;
-  -webkit-align-self: flex-start;
-  align-self: flex-start;
-  padding-right: 4rem;
-}
-.cid-qMsEo6a3HA .mbr-text {
-  word-break: break-word;
-}
-@media (max-width: 991px) {
-  .cid-qMsEo6a3HA .mbr-figure {
-    padding-right: 0;
-    padding-left: 0;
-    padding-bottom: 2rem;
-  }
+.cid-qMsH5WZH8j .card-box {
+  padding: 0rem 2.5rem 3rem 2.5rem;
+  background-color: #ffffff;
 }
 .cid-qMrGzrn0F6 .navbar {
   padding: .5rem 0;
@@ -4692,6 +4370,93 @@ body {
 .cid-qMrGzrn0F6 .nav-link:hover,
 .cid-qMrGzrn0F6 .dropdown-item:hover {
   color: #c1c1c1 !important;
+}
+.cid-qMsI3AEoIq {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #efefef;
+}
+.cid-qMsI3AEoIq h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-qMsI3AEoIq p {
+  color: #767676;
+  text-align: left;
+  margin-bottom: 0;
+}
+.cid-qMsI3AEoIq .card-img {
+  text-align: left;
+  background-color: #ffffff;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  padding: 3rem 2.5rem 0 2.5rem;
+}
+.cid-qMsI3AEoIq .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+.cid-qMsI3AEoIq .card-box {
+  padding: 0rem 2.5rem 3rem 2.5rem;
+  background-color: #ffffff;
+}
+.cid-qMsI3KTQ1I {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #efefef;
+}
+.cid-qMsI3KTQ1I h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-qMsI3KTQ1I p {
+  color: #767676;
+  text-align: left;
+  margin-bottom: 0;
+}
+.cid-qMsI3KTQ1I .card-img {
+  text-align: left;
+  background-color: #ffffff;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  padding: 3rem 2.5rem 0 2.5rem;
+}
+.cid-qMsI3KTQ1I .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+.cid-qMsI3KTQ1I .card-box {
+  padding: 0rem 2.5rem 3rem 2.5rem;
+  background-color: #ffffff;
+}
+.cid-qMsI40KWjz {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #efefef;
+}
+.cid-qMsI40KWjz h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-qMsI40KWjz p {
+  color: #767676;
+  text-align: left;
+  margin-bottom: 0;
+}
+.cid-qMsI40KWjz .card-img {
+  text-align: left;
+  background-color: #ffffff;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  padding: 3rem 2.5rem 0 2.5rem;
+}
+.cid-qMsI40KWjz .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+.cid-qMsI40KWjz .card-box {
+  padding: 0rem 2.5rem 3rem 2.5rem;
+  background-color: #ffffff;
 }
 .cid-qMrGA6NTVs {
   padding-top: 60px;
