create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2401,7 +2401,7 @@ body {
   text-align: left;
 }
 .cid-qL8cVDQiny {
-  background-image: url("../../../assets/images/03.jpg");
+  background-image: url("../../../assets/images/ruka-2000x1333.jpg");
 }
 .cid-qL8cVDQiny .icons-media-container {
   display: flex;
@@ -2892,7 +2892,7 @@ body {
 .cid-qLvZ2KRNWr {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #f9f9f9;
+  background-image: url("../../../assets/images/ruka-2000x1333.jpg");
 }
 .cid-qLvZ2KRNWr .mbr-section-text {
   color: #767676;
@@ -3410,7 +3410,7 @@ body {
 .cid-qLvZgoInbO {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #f8f8f8;
+  background-image: url("../../../assets/images/ruka-2000x1333.jpg");
 }
 .cid-qLvZgoInbO .mbr-section-subtitle {
   color: #767676;
@@ -5001,7 +5001,7 @@ body {
 .cid-qMrBnlkNJg {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #ffffff;
+  background-image: url("../../../assets/images/ruka-2000x1333.jpg");
 }
 .cid-qMrBnlkNJg .title {
   margin-bottom: 2rem;
