create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1400,10 +1400,12 @@ body {
 }
 .cid-qL88L4TNcr H1 {
   text-align: left;
+  color: #767676;
 }
 .cid-qL88L4TNcr .mbr-text,
 .cid-qL88L4TNcr .mbr-section-btn {
   text-align: left;
+  color: #767676;
 }
 .cid-qMrGjbFcLw {
   padding-top: 60px;
@@ -2896,6 +2898,7 @@ body {
 }
 .cid-qLvZ2KRNWr .mbr-section-text {
   color: #767676;
+  text-align: center;
 }
 .cid-qLvZ2KRNWr .mbr-section-subtitle {
   color: #767676;
